// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/Input Default 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="inline-block uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":rj:"
  >
    Input Label 
  </label>
  <p
    className="text-light-body-300 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":rj:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":rj:-description"
      aria-invalid={false}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-400"
      id=":rj:"
      placeholder="Input placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Input Disabled 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="inline-block uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":rl:"
  >
    Input Label 
  </label>
  <p
    className="text-light-body-300 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":rl:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":rl:-description"
      aria-invalid={false}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-400"
      disabled={true}
      id=":rl:"
      placeholder="Input placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Input Error 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="inline-block uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":rk:"
  >
    Input Label 
  </label>
  <p
    className="text-light-body-300 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":rk:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":rk:-description"
      aria-errormessage="Field Required"
      aria-invalid={true}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-error focus:border-error"
      id=":rk:"
      placeholder="Input placeholder"
      type="text"
    />
  </div>
  <div
    className="flex w-full items-center gap-3 mt-2"
  >
    <div
      style={
        Object {
          "height": undefined,
          "width": 20,
        }
      }
    />
    <span
      className="w-full text-left text-error text-body-500"
      data-testid="txt"
    >
      Field Required
    </span>
  </div>
</div>
`;
